--- a/pacman/properties/test1.properties
+++ b/pacman/properties/test1.properties
@@ -1,10 +1,10 @@
-version=simple
+version=multiverse
 TX5.location=9,5
 Troll.location=12,5
 PacMan.location=11,7
 Orion.location=-1,-1
-Alien.location=-1,-1
-Wizard.location=-1,-1
+Alien.location=9,5
+Wizard.location=9,5
 seed=30006
 #Auto Test Configurations
 PacMan.isAuto=false
