--- a/pacman/properties/test5.properties
+++ b/pacman/properties/test5.properties
@@ -2,9 +2,9 @@ version=multiverse
 TX5.location=-1,-1
 Troll.location=-1,-1
 PacMan.location=1,1
-Orion.location=18,9
+Orion.location=-1,-1
 Alien.location=-1,-1
-Wizard.location=-1,-1
+Wizard.location=18,9
 seed=30006
 #Auto Test Configurations
 PacMan.isAuto=false
