Finalization: debugging everything and finalize the design and code

--- a/pacman/properties/test5.properties
+++ b/pacman/properties/test5.properties
@@ -4,7 +4,7 @@ Troll.location=-1,-1
 PacMan.location=1,1
 Orion.location=-1,-1
 Alien.location=-1,-1
-Wizard.location=18,9
+Wizard.location=-1,-1
 seed=30006
 #Auto Test Configurations
 PacMan.isAuto=false
