--- a/pacman/properties/test6.properties
+++ b/pacman/properties/test6.properties
@@ -7,7 +7,7 @@ Alien.location=18,9
 Wizard.location=18,9
 seed=30006
 #Auto Test Configurations
-PacMan.isAuto=true
+PacMan.isAuto=false
 PacMan.move=M,M,M,M,M,M,L,M,M,M,M,M
 Pills.location=
 Gold.location=
